fix: improve db calls in findAll